--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
-title: [Personal Page of Alikhan Abzhanov]
-description: [Welcome to the blog of Alikhan Abzhanov - a high school student passionate about programming, AI, business, fencing, and other topics that will appear in this blog.]
+
+title: Personal Page of Alikhan Abzhanov
+
+description: Welcome to the blog of Alikhan Abzhanov - a high school student passionate about programming, AI, business, fencing, and other topics that will appear in this blog.
